<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/bg_img"
    android:contentDescription="@string/image_description"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_abdul_wahid"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/checkLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/triggerDebitButton"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:background="@drawable/rounded_red"
            android:text="@string/trigger_debit_notification"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/triggerCreditButton"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:text="@string/trigger_credit_notification"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:layout_marginStart="6dp"
            android:background="@drawable/rounded_green"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/recentTransaction"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/rounded_blue"
        android:layout_marginTop="20dp"
        android:text="@string/recent_transaction"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/checkLL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/checkBalance"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/rounded_white"
        android:layout_marginTop="20dp"
        android:text="@string/check_balance"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/recentTransaction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
